--- a/index.html
+++ b/index.html
@@ -1,11 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <section class="work__speed">
+      <header>
+        <div class="top__info-wrap">
+          <div class="logo">
+            <img class="logo_img" src="./pictures/logoDark.svg" />
+          </div>
+          <nav>
+            <ul class="navogation__list">
+              <li class="navigation__list-item">
+                <a class="navigation__link" href="">Home</a>
+              </li>
+              <li class="navigation__list-item">
+                <a class="navigation__link" href="">Product</a>
+              </li>
+              <li class="navigation__list-item">
+                <a class="navigation__link" href="">About</a>
+              </li>
+              <li class="navigation__list-item">
+                <a class="navigation__link" href="">Contact</a>
+              </li>
+            </ul>
+          </nav>
+          <a class="link__button" href=""
+            ><button class="link__button-login">Login</button></a
+          >
+        </div>
+      </header>
+      <div class="top__title-wrap">
+        <h1 class="top__title">Work at the speed of thought</h1>
+        <p class="top__subtitle">
+          Most calendars are designed for teams. Slate is designed for
+          freelancers who want a simple way to plan their schedule.
+        </p>
+        <a class="top__link-button" href="">
+          <button class="button__free">Try For Free</button>
+          <button class="botton__more">Learn More</button>
+        </a>
+      </div>
+      <div class="work__speed-wrap">
+        <img class="work__speed-img" src="./pictures/screens.png" />
+      </div>
+    </section>
+    <section class="features">
+      <div class="features__wrap">
+        <h2 class="features__title">FEATURES</h2>
+        <p class="features__subtext">
+          Most calendars are designed for teams. Slate is designed for
+          freelancers who want a simple way to plan their schedule.
+        </p>
+      </div>
+      <div class="features__information-wrap">
+        <div class="features__picture">
+          <img class="features__img" src="pictures/chart.png" />
+        </div>
+        <ul class="features__list">
+          <li class="features__list-item">
+            <div class="item__icon-title">
+              <img class="item__icon" src="./pictures/logoList1.svg" />
+              <h3 class="item__title title__one">A single source of truth</h3>
+            </div>
+            <p class="item__text">
+              When you add work to your Slate calendar we automatically
+              calculate useful insights
+            </p>
+          </li>
+          <li class="features__list-item">
+            <div class="item__icon-title">
+              <img class="item__icon" src="./pictures/maskList2.svg" />
+              <h3 class="item__title title__two">Intuitive interface</h3>
+            </div>
+            <p class="item__text">
+              When you add work to your Slate calendar we automatically
+              calculate useful insights
+            </p>
+          </li>
+          <li class="features__list-item">
+            <div class="item__icon-title">
+              <img class="item__icon" src="./pictures/&List3.svg" />
+              <h3 class="item__title">Or with rules</h3>
+            </div>
+            <p class="item__text">
+              When you add work to your Slate calendar we automatically
+              calculate useful insights
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="сontents">
+      <div class="сontents__wrap">
+        <h2 class="contents__title">Contents</h2>
+        <p class="contents__subtext">
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+      </div>
+      <ul class="сontents__list">
+        <li class="сontents__list-item">
+          <h3 class="content__title-work">Work</h3>
+          <p class="content__text content__text-margin">
+            Ever wondered if you're too reliant on a client for work? Slate
+            helps you identify .
+          </p>
+          <a class="contect__link link" href="">
+            <button class="content__button">Sign Up</button>
+          </a>
+          <img class="content__img" src="./pictures/MacbookPro.svg" />
+        </li>
+        <li class="сontents__list-item">
+          <h3 class="content__title-work">Design with real data</h3>
+          <p class="content__text text__content">
+            Ever wondered if you're too reliant on a client for work? Slate
+            helps you identify .
+          </p>
+          <a class="contect__link link__content" href="">
+            <button class="content__button">Try For Free</button>
+          </a>
+          <img class="content__img" src="./pictures/BoardsNotifications.svg" />
+        </li>
+      </ul>
+    </section>
+    <section class="gallery">
+      <div class="gallery__content-wrap">
+        <h2 class="gallery__title">Gallery</h2>
+        <p class="gallery__text">
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+      </div>
+      <ul class="gallery__list-card">
+        <li class="gallery__list-item">
+          <img class="gallery__img" src="./pictures/Rectangle1.svg">
+          <img class="gallery__img" src="./pictures/Rectangle2.svg">
+          <img class="gallery__img" src="./pictures/Rectangle3.svg">
+          <img class="gallery__img" src="./pictures/Rectangle4.svg">
+        </li>
+        <li class="gallery__list-items">
+          <img class="grallery__img" src="./pictures/Rectangle5.svg">
+          <img class="gallery__img" src="./pictures/Rectangle6.svg">
+          <img class="gallery__img" src="./pictures/Rectangle7.svg">
+        </li>
+      </ul>
+      <a class="gallery__link" href="">
+        <button class="gallery__button">See more</button>
+      </a>
+    </section>
+    <section class="partners">
+
+    </section>
+  </body>
 </html>
