--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             </ul>
           </nav>
           <a class="link__button" href=""
-            ><button class="link__button-login">Login</button></a
-          >
+            ><button class="link__button-login">Login</button></a>
         </div>
       </header>
       <div class="top__title-wrap">
@@ -63,7 +62,7 @@
       </div>
       <div class="features__information-wrap">
         <div class="features__picture">
-          <img class="features__img" src="pictures/chart.png" />
+          <img class="features__img" src="./pictures/chart.png" />
         </div>
         <ul class="features__list">
           <li class="features__list-item">
@@ -156,9 +155,6 @@
       <a class="gallery__link" href="">
         <button class="gallery__button">See more</button>
       </a>
-    </section>
-    <section class="partners">
-
     </section>
   </body>
 </html>
