--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
@@ -34,7 +34,8 @@
             </ul>
           </nav>
           <a class="link__button" href=""
-            ><button class="link__button-login">Login</button></a>
+            ><button class="link__button-login">Login</button></a
+          >
         </div>
       </header>
       <div class="top__title-wrap">
@@ -141,20 +142,251 @@
       </div>
       <ul class="gallery__list-card">
         <li class="gallery__list-item">
-          <img class="gallery__img" src="./pictures/Rectangle1.svg">
-          <img class="gallery__img" src="./pictures/Rectangle2.svg">
-          <img class="gallery__img" src="./pictures/Rectangle3.svg">
-          <img class="gallery__img" src="./pictures/Rectangle4.svg">
+          <img class="gallery__img" src="./pictures/Rectangle1.svg" />
+          <img class="gallery__img" src="./pictures/Rectangle2.svg" />
+          <img class="gallery__img" src="./pictures/Rectangle3.svg" />
+          <img class="gallery__img last" src="./pictures/Rectangle4.svg" />
         </li>
         <li class="gallery__list-items">
-          <img class="grallery__img" src="./pictures/Rectangle5.svg">
-          <img class="gallery__img" src="./pictures/Rectangle6.svg">
-          <img class="gallery__img" src="./pictures/Rectangle7.svg">
+          <img class="gallery__picture" src="./pictures/Rectangle5.svg" />
+          <img class="gallery__picture midle" src="./pictures/Rectangle6.svg" />
+          <img class="gallery__picture" src="./pictures/Rectangle7.svg" />
         </li>
       </ul>
       <a class="gallery__link" href="">
         <button class="gallery__button">See more</button>
       </a>
     </section>
+    <section class="partners">
+      <div class="partners__title-wrap">
+        <h2 class="partners__title">Partners</h2>
+        <p class="partners__subtitle-text">
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+      </div>
+      <ul class="partners__list">
+        <li class="partners__list-item">
+          <a class="partners__link" href="">
+            <img
+              class="partners__icon"
+              src="./pictures/logos_apple-app-store.svg"
+            />
+          </a>
+        </li>
+        <li class="partners__list-item">
+          <a class="partners__link" href="">
+            <img class="partners__icon" src="./pictures/logos_apiary.svg" />
+          </a>
+        </li>
+        <li class="partners__list-item">
+          <a class="partners__link" href="">
+            <img
+              class="partners__icon"
+              src="./pictures/logos_android-icon.svg"
+            />
+          </a>
+        </li>
+        <li class="partners__list-item">
+          <a class="partners__link" href="">
+            <img class="partners__icon" src="./pictures/logos_basecamp.svg" />
+          </a>
+        </li>
+        <li class="partners__list-item">
+          <a class="partners__link" href="">
+            <img class="partners__icon" src="./pictures/logos_airbnb.svg" />
+          </a>
+        </li>
+        <li class="partners__list-item">
+          <a class="partners__link" href="">
+            <img class="partners__icon" src="./pictures/logos_ibm.svg" />
+          </a>
+        </li>
+      </ul>
+      <a class="partners__link-button" href="">
+        <button class="partners__button">All Partners</button>
+      </a>
+    </section>
+    <section class="testimonials">
+      <h2 class="testimonials__title">Testimonials</h2>
+      <ul class="testimonials__list">
+        <li class="testimonials__list-item">
+          <div class="testimonials__iner-wrap">
+            <div class="testimonials__avatar-author">
+              <img
+                class="testimonials__avatar-icon"
+                src="./pictures/avatar1.svg"
+              />
+            </div>
+            <div class="name__author-link">
+              <p class="testimonials__name-text">Claire Bell</p>
+              <a class="link__designer" href="">Designer</a>
+            </div>
+          </div>
+          <p class="testimonials__description">
+            Slate helps you see how many more days<br />
+            you need to work to reach your financial <br />goal for the month
+            and year. Slate helps <br />you see how many more days <br />you
+            need to work to reach your financial<br />
+            goal for the month and year.your financial<br />
+            goal for the month and year.
+          </p>
+        </li>
+        <li class="testimonials__list-item">
+          <div class="testimonials__iner-wrap">
+            <div class="testimonials__avatar-author">
+              <img
+                class="testimonials__avatar-icon"
+                src="./pictures/avatar2.svg"
+              />
+            </div>
+            <div class="name__author-link">
+              <p class="testimonials__name-text">Francisco Lane</p>
+              <a class="link__designer" href="">Designer</a>
+            </div>
+          </div>
+          <p class="testimonials__description">
+            Slate helps you see how many more days<br />
+            you need to work to reach your financial <br />goal for the month
+            and year. Slate helps <br />you see how many more days <br />you
+            need to work to reach your financial<br />
+            goal for the month and year.
+          </p>
+        </li>
+        <li class="testimonials__list-item">
+          <div class="testimonials__iner-wrap">
+            <div class="testimonials__avatar-author">
+              <img
+                class="testimonials__avatar-icon"
+                src="./pictures/avatar3.svg"
+              />
+            </div>
+            <div class="name__author-link">
+              <p class="testimonials__name-text">Ralph Fisher</p>
+              <a class="link__designer" href="">Designer</a>
+            </div>
+          </div>
+          <p class="testimonials__description">
+            Slate helps you see how many more days<br />
+            you need to work to reach your financial <br />goal for the month
+            and year. Slate helps <br />you see how many more days <br />you
+            need to work to reach your financial<br />
+            goal for the month and year.
+          </p>
+        </li>
+        <li class="testimonials__list-item">
+          <div class="testimonials__iner-wrap">
+            <div class="testimonials__avatar-author">
+              <img
+                class="testimonials__avatar-icon"
+                src="./pictures/avatar4.svg"
+              />
+            </div>
+            <div class="name__author-link">
+              <p class="testimonials__name-text">Jorge Murphy</p>
+              <a class="link__designer" href="">Designer</a>
+            </div>
+          </div>
+          <p class="testimonials__description">
+            Slate helps you see how many more days<br />
+            you need to work to reach your financial <br />goal for the month
+            and year. Slate helps <br />you see how many more days <br />you
+            need to work to reach your financial<br />
+            goal for the month and year.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="open__type">
+      <div class="open__type-content">
+        <div class="open__type-inner">
+          <h2 class="open__type-title">OpenType features<br> 
+            and Variable fonts</h2>
+            <a class="open__type-link" href="">
+              <button class="open__type-button">Try For Free</button>
+              </a>
+        </div>
+              <div class="open__type-img">
+                <img class="" src="./pictures/LineChart 1.svg">
+              </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="categories__wrap">
+        <ul class="fingertipe__list">
+          <h3 class="title__categori">Fingertipe</h3>
+          <li class="fingertipe__list-item">
+            <a class="link__categori" href="">Home</a>
+          </li>
+          <li class="fingertipe__list-item">
+            <a class="link__categori" href="">Examples</a>
+          </li>
+          <li class="fingertipe__list-item">
+            <a class="link__categori" href="">Pricing</a>
+          </li>
+          <li class="fingertipe__list-item">
+            <a class="link__categori" href="">Updates</a>
+          </li>
+        </ul>
+        <ul class="resources__list">
+          <h3 class="title__categori">Resources</h3>
+          <li class="resources__list-item">
+            <a  class="link__categori" href="">Home</a>
+          </li>
+          <li class="resources__list-item">
+            <a  class="link__categori" href="">Examples</a>
+          </li>
+          <li class="resources__list-item">
+            <a  class="link__categori" href="">Pricing</a>
+          </li>
+          <li class="resources__list-item">
+            <a  class="link__categori" href="">Updates</a>
+          </li>
+        </ul>
+        <ul class="about__list">
+          <h3 class="title__categori">About</h3>
+          <li class="about__list-item">
+            <a class="link__categori" href="">Home</a>
+          </li>
+          <li class="about__list-item">
+            <a class="link__categori" href="">Examples</a>
+          </li>
+          <li class="about__list-item">
+            <a class="link__categori" href="">Pricing</a>
+          </li>
+          <li class="about__list-item">
+            <a class="link__categori" href="">Updates</a>
+          </li>
+        </ul>
+      </div>
+      <div class="communication__wrap">
+        <div class="location">
+          <img class="location__icon" src="./pictures/maps__navigator.svg">
+          <p class="location__text">7480 Mockingbird Hill undefined </p>
+        </div>
+        <div class="telephone">
+          <img class="telephone__icon" src="./pictures/phone.svg">
+          <p class="telephone__text">(239) 555-0108</p>
+        </div>
+        <ul class="networks__list">
+          <li class="networks__list-item">
+            <a class="networks__link" href="">
+              <img class="networks__img" src="./pictures/twetter.svg">
+            </a>
+          </li>
+          <li class="networks__list-item">
+            <a class="networks__link" href="">
+              <img class="networks__img" src="./pictures/fascbok.svg">
+            </a>
+          </li>
+          <li class="networks__list-item">
+            <a class="networks__link" href="">
+              <img class="networks__img" src="./pictures/insta.svg">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
