--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="work__speed">
-      <header>
+      <header class="header">
         <div class="top__info-wrap">
           <div class="logo">
             <img class="logo_img" src="./pictures/logoDark.svg" />
@@ -33,9 +33,26 @@
               </li>
             </ul>
           </nav>
-          <a class="link__button" href=""
-            ><button class="link__button-login">Login</button></a
-          >
+          <a class="link__button" href="">
+            <button class="link__button-login">Login</button></a>
+            <div class="header__mobile-wrap">
+              <button class="button__mobile">
+                <img class="header__mobile-img" src="./pictures/VectorMobile.svg"></button>
+            </div>
+            <ul class="nav__mobile-list ">
+              <li class="nav__mobile-item">
+                <a class="nav__mobile-link" href="">Home</a>
+              </li>
+              <li class="nav__mobile-item">
+                <a class="nav__mobile-link" href="">Product</a>
+              </li>
+              <li class="nav__mobile-item">
+                <a class="nav__mobile-link" href="">About</a>
+              </li>
+              <li class="nav__mobile-item">
+                <a class="nav__mobile-link" href="">Contact</a>
+              </li>
+            </ul>
         </div>
       </header>
       <div class="top__title-wrap">
@@ -111,8 +128,8 @@
         <li class="сontents__list-item">
           <h3 class="content__title-work">Work</h3>
           <p class="content__text content__text-margin">
-            Ever wondered if you're too reliant on a client for work? Slate
-            helps you identify .
+            Ever wondered if you're too reliant<br> on a client for work? Slate
+            helps<br> you identify .
           </p>
           <a class="contect__link link" href="">
             <button class="content__button">Sign Up</button>
@@ -122,8 +139,8 @@
         <li class="сontents__list-item">
           <h3 class="content__title-work">Design with real data</h3>
           <p class="content__text text__content">
-            Ever wondered if you're too reliant on a client for work? Slate
-            helps you identify .
+            Ever wondered if you're too reliant<br> on a client for work? Slate
+            helps<br> you identify .
           </p>
           <a class="contect__link link__content" href="">
             <button class="content__button">Try For Free</button>
@@ -305,9 +322,9 @@
             <a class="open__type-link" href="">
               <button class="open__type-button">Try For Free</button>
               </a>
-        </div>
+              </div>
               <div class="open__type-img">
-                <img class="" src="./pictures/LineChart 1.svg">
+                <img class="open__type-icon" src="./pictures/LineChart 1.svg">
               </div>
         </div>
       </div>
@@ -388,5 +405,8 @@
         </ul>
       </div>
     </footer>
+    <script src="./index.js">
+
+    </script>
   </body>
 </html>
